batch-mode/ai-json-template-derive/tests/trybuild_justification/fail_unnamed_struct.stderr
error: Only support unary struct!
  --> tests/trybuild/fail_unnamed_struct.rs:16:57
   |
16 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                         ^^^^^^^
   |
   = note: this error originates in the derive macro `Getters` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only support unary struct!
  --> tests/trybuild/fail_unnamed_struct.rs:16:66
   |
16 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                                  ^^^^^^^
   |
   = note: this error originates in the derive macro `Setters` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `unnamed fields`. Expected named fields.
  --> tests/trybuild/fail_unnamed_struct.rs:16:75
   |
16 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                                           ^^^^^^^
   |
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: AiJsonTemplate derive only supports a named struct.
  --> tests/trybuild/fail_unnamed_struct.rs:18:1
   |
18 | / #[getset(get = "pub", set = "pub")]
19 | | #[builder(setter(into))]
20 | | struct FailUnnamedStruct(String, i32);
   | |______________________________________^

warning: unused import: `ai_json_template::*`
 --> tests/trybuild/fail_unnamed_struct.rs:9:5
  |
9 | use ai_json_template::*;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
